--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 .App {
-  text-align: center;
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
 .App-logo {
@@ -22,6 +29,46 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.buttonRow {
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: row;
+}
+
+.playButton {
+  color: green;
+  margin-left: 3rem;
+  margin-right: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.stopButton {
+  color: red;
+  margin-right: 10px;
+  margin-left: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.resetButton {
+  color: yellow;
+  margin-right: 10px;
+  margin-left: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.image {
+  padding: 5em;
 }
 
 .App-link {
